// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compiler errors 1`] = `
Object {
  "context": "<PROJECT_ROOT>/test/fixtures/error",
  "name": undefined,
  "options": Object {
    "cache": false,
    "context": "<PROJECT_ROOT>/test/fixtures/error",
    "devtool": "source-map",
    "entry": Array [
      "./app.js",
    ],
    "module": Object {
      "defaultRules": Array [
        Object {
          "resolve": Object {},
          "type": "javascript/auto",
        },
        Object {
          "resolve": Object {
            "mainFields": Array [
              "browser",
              "main",
            ],
          },
          "test": /\\\\\\.mjs\\$/i,
          "type": "javascript/esm",
        },
        Object {
          "test": /\\\\\\.json\\$/i,
          "type": "json",
        },
        Object {
          "test": /\\\\\\.wasm\\$/i,
          "type": "webassembly/experimental",
        },
      ],
      "exprContextCritical": true,
      "exprContextRecursive": true,
      "exprContextRegExp": false,
      "exprContextRequest": ".",
      "rules": Array [],
      "strictExportPresence": false,
      "strictThisContextOnImports": false,
      "unknownContextCritical": true,
      "unknownContextRecursive": true,
      "unknownContextRegExp": false,
      "unknownContextRequest": ".",
      "unsafeCache": false,
      "wrappedContextCritical": false,
      "wrappedContextRecursive": true,
      "wrappedContextRegExp": /\\.\\*/,
    },
    "node": Object {
      "Buffer": true,
      "__dirname": "mock",
      "__filename": "mock",
      "console": false,
      "global": true,
      "process": true,
      "setImmediate": true,
    },
    "output": Object {
      "chunkCallbackName": "webpackChunk",
      "chunkFilename": "./[id].output.js",
      "chunkLoadTimeout": 120000,
      "crossOriginLoading": false,
      "devtoolLineToLine": false,
      "devtoolNamespace": "",
      "filename": "./output.js",
      "globalObject": "window",
      "hashDigest": "hex",
      "hashDigestLength": 20,
      "hashFunction": "md4",
      "hotUpdateChunkFilename": "[id].[hash].hot-update.js",
      "hotUpdateFunction": "webpackHotUpdate",
      "hotUpdateMainFilename": "[hash].hot-update.json",
      "jsonpFunction": "webpackJsonp",
      "jsonpScriptType": false,
      "library": "",
      "libraryTarget": "var",
      "path": "<PROJECT_ROOT>/test/fixtures/error",
      "pathinfo": false,
      "sourceMapFilename": "[file].map[query]",
      "strictModuleExceptionHandling": false,
      "webassemblyModuleFilename": "[modulehash].module.wasm",
    },
    "performance": Object {
      "hints": "warning",
      "maxAssetSize": 250000,
      "maxEntrypointSize": 250000,
    },
    "plugins": Array [
      NamedModulesPlugin {
        "options": Object {},
      },
    ],
    "resolve": Object {
      "aliasFields": Array [
        "browser",
      ],
      "cacheWithContext": false,
      "extensions": Array [
        ".wasm",
        ".mjs",
        ".js",
        ".json",
      ],
      "mainFields": Array [
        "browser",
        "module",
        "main",
      ],
      "mainFiles": Array [
        "index",
      ],
      "modules": Array [
        "node_modules",
      ],
      "unsafeCache": true,
    },
    "resolveLoader": Object {
      "cacheWithContext": false,
      "extensions": Array [
        ".js",
        ".json",
      ],
      "mainFields": Array [
        "loader",
        "main",
      ],
      "mainFiles": Array [
        "index",
      ],
      "unsafeCache": true,
    },
    "serve": Object {},
    "target": "web",
  },
}
`;

exports[`compiler errors 2`] = `
Object {
  "assets": Array [
    Object {
      "chunkNames": Array [
        "main",
      ],
      "chunks": Array [
        0,
      ],
      "emitted": undefined,
      "isOverSizeLimit": undefined,
      "name": "./output.js",
      "size": 1125,
    },
    Object {
      "chunkNames": Array [
        "main",
      ],
      "chunks": Array [
        0,
      ],
      "emitted": undefined,
      "isOverSizeLimit": undefined,
      "name": "./output.js.map",
      "size": 4689,
    },
  ],
  "assetsByChunkName": Object {
    "main": Array [
      "./output.js",
      "./output.js.map",
    ],
  },
  "builtAt": /\\\\d\\+/,
  "children": Array [],
  "chunks": Array [
    Object {
      "children": Array [],
      "childrenByOrder": Object {},
      "entry": true,
      "files": Array [
        "./output.js",
        "./output.js.map",
      ],
      "filteredModules": 0,
      "hash": "8cb6468249519f29b2ee",
      "id": 0,
      "initial": true,
      "modules": Array [
        Object {
          "assets": Array [],
          "built": true,
          "cacheable": true,
          "chunks": Array [
            0,
          ],
          "depth": 1,
          "errors": 0,
          "failed": false,
          "id": "./app.js",
          "identifier": "<PROJECT_ROOT>/test/fixtures/error/app.js",
          "index": 1,
          "index2": 0,
          "issuer": "multi ./app.js",
          "issuerId": 0,
          "issuerName": "multi ./app.js",
          "issuerPath": Array [
            Object {
              "id": 0,
              "identifier": "multi ./app.js",
              "name": "multi ./app.js",
              "profile": undefined,
            },
          ],
          "name": "./app.js",
          "optimizationBailout": Array [
            "ModuleConcatenation bailout: Module is not an ECMAScript module",
          ],
          "optional": false,
          "prefetched": false,
          "profile": undefined,
          "providedExports": null,
          "reasons": Array [
            Object {
              "explanation": undefined,
              "loc": "main:100000",
              "module": "multi ./app.js",
              "moduleId": 0,
              "moduleIdentifier": "multi ./app.js",
              "moduleName": "multi ./app.js",
              "type": "single entry",
              "userRequest": "./app.js",
            },
          ],
          "size": 58,
          "source": "/* eslint-disable */

if (!window) {
  require('test');
}
",
          "usedExports": true,
          "warnings": 0,
        },
        Object {
          "assets": Array [],
          "built": true,
          "cacheable": undefined,
          "chunks": Array [
            0,
          ],
          "depth": 0,
          "errors": 0,
          "failed": false,
          "id": 0,
          "identifier": "multi ./app.js",
          "index": 0,
          "index2": 1,
          "issuer": null,
          "issuerId": null,
          "issuerName": null,
          "issuerPath": null,
          "name": "multi ./app.js",
          "optimizationBailout": Array [
            "ModuleConcatenation bailout: Module is not an ECMAScript module",
          ],
          "optional": false,
          "prefetched": false,
          "profile": undefined,
          "providedExports": null,
          "reasons": Array [
            Object {
              "explanation": undefined,
              "module": null,
              "moduleId": null,
              "moduleIdentifier": null,
              "moduleName": null,
              "type": "multi entry",
              "userRequest": undefined,
            },
          ],
          "size": 28,
          "usedExports": true,
          "warnings": 0,
        },
      ],
      "names": Array [
        "main",
      ],
      "origins": Array [
        Object {
          "loc": "main",
          "module": "",
          "moduleId": undefined,
          "moduleIdentifier": "",
          "moduleName": "",
          "reasons": Array [],
          "request": undefined,
        },
      ],
      "parents": Array [],
      "reason": undefined,
      "recorded": undefined,
      "rendered": true,
      "siblings": Array [],
      "size": 86,
    },
  ],
  "entrypoints": Object {
    "main": Object {
      "assets": Array [
        "./output.js",
        "./output.js.map",
      ],
      "childAssets": Object {},
      "children": Object {},
      "chunks": Array [
        0,
      ],
      "isOverSizeLimit": undefined,
    },
  },
  "errors": Array [
    "./app.js
Module not found: Error: Can't resolve 'test' in '<PROJECT_ROOT>/test/fixtures/error'
resolve 'test' in '<PROJECT_ROOT>/test/fixtures/error'
  Parsed request is a module
  using description file: <PROJECT_ROOT>/package.json (relative path: ./test/fixtures/error)
    Field 'browser' doesn't contain a valid alias configuration
    resolve as module
      <PROJECT_ROOT>/test/fixtures/error/node_modules doesn't exist or is not a directory
      <PROJECT_ROOT>/test/fixtures/node_modules doesn't exist or is not a directory
      <PROJECT_ROOT>/test/node_modules doesn't exist or is not a directory
      <HOME_DIR>/code/node_modules doesn't exist or is not a directory
      <HOME_DIR>/node_modules doesn't exist or is not a directory
      /Users/node_modules doesn't exist or is not a directory
      /node_modules doesn't exist or is not a directory
      looking for modules in <PROJECT_ROOT>/node_modules
        using description file: <PROJECT_ROOT>/package.json (relative path: ./node_modules)
          Field 'browser' doesn't contain a valid alias configuration
          using description file: <PROJECT_ROOT>/package.json (relative path: ./node_modules/test)
            no extension
              Field 'browser' doesn't contain a valid alias configuration
              <PROJECT_ROOT>/node_modules/test doesn't exist
            .wasm
              Field 'browser' doesn't contain a valid alias configuration
              <PROJECT_ROOT>/node_modules/test.wasm doesn't exist
            .mjs
              Field 'browser' doesn't contain a valid alias configuration
              <PROJECT_ROOT>/node_modules/test.mjs doesn't exist
            .js
              Field 'browser' doesn't contain a valid alias configuration
              <PROJECT_ROOT>/node_modules/test.js doesn't exist
            .json
              Field 'browser' doesn't contain a valid alias configuration
              <PROJECT_ROOT>/node_modules/test.json doesn't exist
            as directory
              <PROJECT_ROOT>/node_modules/test doesn't exist
[<PROJECT_ROOT>/test/fixtures/error/node_modules]
[<PROJECT_ROOT>/test/fixtures/node_modules]
[<PROJECT_ROOT>/test/node_modules]
[<HOME_DIR>/code/node_modules]
[<HOME_DIR>/node_modules]
[/Users/node_modules]
[/node_modules]
[<PROJECT_ROOT>/node_modules/test]
[<PROJECT_ROOT>/node_modules/test.wasm]
[<PROJECT_ROOT>/node_modules/test.mjs]
[<PROJECT_ROOT>/node_modules/test.js]
[<PROJECT_ROOT>/node_modules/test.json]
 @ ./app.js 4:2-17
 @ multi ./app.js",
  ],
  "filteredAssets": 0,
  "filteredModules": 0,
  "hash": "171dc4ae799d9913730a",
  "modules": Array [
    Object {
      "assets": Array [],
      "built": true,
      "cacheable": true,
      "chunks": Array [
        0,
      ],
      "depth": 1,
      "errors": 0,
      "failed": false,
      "id": "./app.js",
      "identifier": "<PROJECT_ROOT>/test/fixtures/error/app.js",
      "index": 1,
      "index2": 0,
      "issuer": "multi ./app.js",
      "issuerId": 0,
      "issuerName": "multi ./app.js",
      "issuerPath": Array [
        Object {
          "id": 0,
          "identifier": "multi ./app.js",
          "name": "multi ./app.js",
          "profile": undefined,
        },
      ],
      "name": "./app.js",
      "optimizationBailout": Array [
        "ModuleConcatenation bailout: Module is not an ECMAScript module",
      ],
      "optional": false,
      "prefetched": false,
      "profile": undefined,
      "providedExports": null,
      "reasons": Array [
        Object {
          "explanation": undefined,
          "loc": "main:100000",
          "module": "multi ./app.js",
          "moduleId": 0,
          "moduleIdentifier": "multi ./app.js",
          "moduleName": "multi ./app.js",
          "type": "single entry",
          "userRequest": "./app.js",
        },
      ],
      "size": 58,
      "source": "/* eslint-disable */

if (!window) {
  require('test');
}
",
      "usedExports": true,
      "warnings": 0,
    },
    Object {
      "assets": Array [],
      "built": true,
      "cacheable": undefined,
      "chunks": Array [
        0,
      ],
      "depth": 0,
      "errors": 0,
      "failed": false,
      "id": 0,
      "identifier": "multi ./app.js",
      "index": 0,
      "index2": 1,
      "issuer": null,
      "issuerId": null,
      "issuerName": null,
      "issuerPath": null,
      "name": "multi ./app.js",
      "optimizationBailout": Array [
        "ModuleConcatenation bailout: Module is not an ECMAScript module",
      ],
      "optional": false,
      "prefetched": false,
      "profile": undefined,
      "providedExports": null,
      "reasons": Array [
        Object {
          "explanation": undefined,
          "module": null,
          "moduleId": null,
          "moduleIdentifier": null,
          "moduleName": null,
          "type": "multi entry",
          "userRequest": undefined,
        },
      ],
      "size": 28,
      "usedExports": true,
      "warnings": 0,
    },
  ],
  "namedChunkGroups": Object {
    "main": Object {
      "assets": Array [
        "./output.js",
        "./output.js.map",
      ],
      "childAssets": Object {},
      "children": Object {},
      "chunks": Array [
        0,
      ],
      "isOverSizeLimit": undefined,
    },
  },
  "outputPath": "<PROJECT_ROOT>/test/fixtures/error",
  "publicPath": "",
  "time": /\\\\d\\+/,
  "version": /\\\\d\\+\\\\\\.\\\\d\\+\\\\\\.\\\\d\\+/,
  "warnings": Array [
    "configuration
The 'mode' option has not been set, webpack will fallback to 'production' for this value. Set 'mode' option to 'development' or 'production' to enable defaults for each environment.
You can also set it to 'none' to disable any default behavior. Learn more: https://webpack.js.org/concepts/mode/",
  ],
}
`;

exports[`compiler getCompiler 1`] = `
Object {
  "context": "<PROJECT_ROOT>/test/fixtures/basic",
  "name": undefined,
  "options": Object {
    "cache": false,
    "context": "<PROJECT_ROOT>/test/fixtures/basic",
    "devtool": "source-map",
    "entry": Array [
      "./app.js",
    ],
    "module": Object {
      "defaultRules": Array [
        Object {
          "resolve": Object {},
          "type": "javascript/auto",
        },
        Object {
          "resolve": Object {
            "mainFields": Array [
              "browser",
              "main",
            ],
          },
          "test": /\\\\\\.mjs\\$/i,
          "type": "javascript/esm",
        },
        Object {
          "test": /\\\\\\.json\\$/i,
          "type": "json",
        },
        Object {
          "test": /\\\\\\.wasm\\$/i,
          "type": "webassembly/experimental",
        },
      ],
      "exprContextCritical": true,
      "exprContextRecursive": true,
      "exprContextRegExp": false,
      "exprContextRequest": ".",
      "rules": Array [],
      "strictExportPresence": false,
      "strictThisContextOnImports": false,
      "unknownContextCritical": true,
      "unknownContextRecursive": true,
      "unknownContextRegExp": false,
      "unknownContextRequest": ".",
      "unsafeCache": false,
      "wrappedContextCritical": false,
      "wrappedContextRecursive": true,
      "wrappedContextRegExp": /\\.\\*/,
    },
    "node": Object {
      "Buffer": true,
      "__dirname": "mock",
      "__filename": "mock",
      "console": false,
      "global": true,
      "process": true,
      "setImmediate": true,
    },
    "output": Object {
      "chunkCallbackName": "webpackChunk",
      "chunkFilename": "./[id].output.js",
      "chunkLoadTimeout": 120000,
      "crossOriginLoading": false,
      "devtoolLineToLine": false,
      "devtoolNamespace": "",
      "filename": "./output.js",
      "globalObject": "window",
      "hashDigest": "hex",
      "hashDigestLength": 20,
      "hashFunction": "md4",
      "hotUpdateChunkFilename": "[id].[hash].hot-update.js",
      "hotUpdateFunction": "webpackHotUpdate",
      "hotUpdateMainFilename": "[hash].hot-update.json",
      "jsonpFunction": "webpackJsonp",
      "jsonpScriptType": false,
      "library": "",
      "libraryTarget": "var",
      "path": "<PROJECT_ROOT>/test/fixtures/basic",
      "pathinfo": false,
      "sourceMapFilename": "[file].map[query]",
      "strictModuleExceptionHandling": false,
      "webassemblyModuleFilename": "[modulehash].module.wasm",
    },
    "performance": Object {
      "hints": "warning",
      "maxAssetSize": 250000,
      "maxEntrypointSize": 250000,
    },
    "plugins": Array [
      NamedModulesPlugin {
        "options": Object {},
      },
    ],
    "resolve": Object {
      "aliasFields": Array [
        "browser",
      ],
      "cacheWithContext": false,
      "extensions": Array [
        ".wasm",
        ".mjs",
        ".js",
        ".json",
      ],
      "mainFields": Array [
        "browser",
        "module",
        "main",
      ],
      "mainFiles": Array [
        "index",
      ],
      "modules": Array [
        "node_modules",
      ],
      "unsafeCache": true,
    },
    "resolveLoader": Object {
      "cacheWithContext": false,
      "extensions": Array [
        ".js",
        ".json",
      ],
      "mainFields": Array [
        "loader",
        "main",
      ],
      "mainFiles": Array [
        "index",
      ],
      "unsafeCache": true,
    },
    "serve": Object {},
    "target": "web",
  },
}
`;

exports[`compiler getCompiler 2`] = `
Array [
  "compiler",
]
`;

exports[`compiler getCompiler 3`] = `"Compiler"`;

exports[`compiler getCompiler 4`] = `
Object {
  "assets": Array [
    Object {
      "chunkNames": Array [
        "main",
      ],
      "chunks": Array [
        0,
      ],
      "emitted": true,
      "isOverSizeLimit": undefined,
      "name": "./output.js",
      "size": 1652,
    },
    Object {
      "chunkNames": Array [
        "main",
      ],
      "chunks": Array [
        0,
      ],
      "emitted": true,
      "isOverSizeLimit": undefined,
      "name": "./output.js.map",
      "size": 6012,
    },
  ],
  "assetsByChunkName": Object {
    "main": Array [
      "./output.js",
      "./output.js.map",
    ],
  },
  "builtAt": /\\\\d\\+/,
  "children": Array [],
  "chunks": Array [
    Object {
      "children": Array [],
      "childrenByOrder": Object {},
      "entry": true,
      "files": Array [
        "./output.js",
        "./output.js.map",
      ],
      "filteredModules": 0,
      "hash": "f41570492dc66df80eee",
      "id": 0,
      "initial": true,
      "modules": Array [
        Object {
          "assets": Array [],
          "built": true,
          "cacheable": true,
          "chunks": Array [
            0,
          ],
          "depth": 2,
          "errors": 0,
          "failed": false,
          "id": "../../../node_modules/webpack/buildin/module.js",
          "identifier": "<PROJECT_ROOT>/node_modules/webpack/buildin/module.js",
          "index": 2,
          "index2": 0,
          "issuer": "<PROJECT_ROOT>/test/fixtures/basic/app.js",
          "issuerId": "./app.js",
          "issuerName": "./app.js",
          "issuerPath": Array [
            Object {
              "id": 0,
              "identifier": "multi ./app.js",
              "name": "multi ./app.js",
              "profile": undefined,
            },
            Object {
              "id": "./app.js",
              "identifier": "<PROJECT_ROOT>/test/fixtures/basic/app.js",
              "name": "./app.js",
              "profile": undefined,
            },
          ],
          "name": "(webpack)/buildin/module.js",
          "optimizationBailout": Array [
            "ModuleConcatenation bailout: Module is not an ECMAScript module",
          ],
          "optional": false,
          "prefetched": false,
          "profile": undefined,
          "providedExports": null,
          "reasons": Array [
            Object {
              "explanation": undefined,
              "loc": "1:0-60",
              "module": "./app.js",
              "moduleId": "./app.js",
              "moduleIdentifier": "<PROJECT_ROOT>/test/fixtures/basic/app.js",
              "moduleName": "./app.js",
              "type": "cjs require",
              "userRequest": "module",
            },
          ],
          "size": 497,
          "source": "module.exports = function(module) {
	if (!module.webpackPolyfill) {
		module.deprecate = function() {};
		module.paths = [];
		// module.parent = undefined by default
		if (!module.children) module.children = [];
		Object.defineProperty(module, \\"loaded\\", {
			enumerable: true,
			get: function() {
				return module.l;
			}
		});
		Object.defineProperty(module, \\"id\\", {
			enumerable: true,
			get: function() {
				return module.i;
			}
		});
		module.webpackPolyfill = 1;
	}
	return module;
};
",
          "usedExports": true,
          "warnings": 0,
        },
        Object {
          "assets": Array [],
          "built": true,
          "cacheable": true,
          "chunks": Array [
            0,
          ],
          "depth": 1,
          "errors": 0,
          "failed": false,
          "id": "./app.js",
          "identifier": "<PROJECT_ROOT>/test/fixtures/basic/app.js",
          "index": 1,
          "index2": 2,
          "issuer": "multi ./app.js",
          "issuerId": 0,
          "issuerName": "multi ./app.js",
          "issuerPath": Array [
            Object {
              "id": 0,
              "identifier": "multi ./app.js",
              "name": "multi ./app.js",
              "profile": undefined,
            },
          ],
          "name": "./app.js",
          "optimizationBailout": Array [
            "ModuleConcatenation bailout: Module is not an ECMAScript module",
          ],
          "optional": false,
          "prefetched": false,
          "profile": undefined,
          "providedExports": null,
          "reasons": Array [
            Object {
              "explanation": undefined,
              "loc": "main:100000",
              "module": "multi ./app.js",
              "moduleId": 0,
              "moduleIdentifier": "multi ./app.js",
              "moduleName": "multi ./app.js",
              "type": "single entry",
              "userRequest": "./app.js",
            },
          ],
          "size": 207,
          "source": "/* eslint no-console: off */

require('./component');

if (typeof module.hot === 'object') {
  module.hot.accept((err) => {
    if (err) {
      console.error('Cannot apply HMR update.', err);
    }
  });
}
",
          "usedExports": true,
          "warnings": 0,
        },
        Object {
          "assets": Array [],
          "built": true,
          "cacheable": true,
          "chunks": Array [
            0,
          ],
          "depth": 2,
          "errors": 0,
          "failed": false,
          "id": "./component.js",
          "identifier": "<PROJECT_ROOT>/test/fixtures/basic/component.js",
          "index": 3,
          "index2": 1,
          "issuer": "<PROJECT_ROOT>/test/fixtures/basic/app.js",
          "issuerId": "./app.js",
          "issuerName": "./app.js",
          "issuerPath": Array [
            Object {
              "id": 0,
              "identifier": "multi ./app.js",
              "name": "multi ./app.js",
              "profile": undefined,
            },
            Object {
              "id": "./app.js",
              "identifier": "<PROJECT_ROOT>/test/fixtures/basic/app.js",
              "name": "./app.js",
              "profile": undefined,
            },
          ],
          "name": "./component.js",
          "optimizationBailout": Array [
            "ModuleConcatenation bailout: Module is not an ECMAScript module",
          ],
          "optional": false,
          "prefetched": false,
          "profile": undefined,
          "providedExports": null,
          "reasons": Array [
            Object {
              "explanation": undefined,
              "loc": "3:0-22",
              "module": "./app.js",
              "moduleId": "./app.js",
              "moduleIdentifier": "<PROJECT_ROOT>/test/fixtures/basic/app.js",
              "moduleName": "./app.js",
              "type": "cjs require",
              "userRequest": "./component",
            },
          ],
          "size": 105,
          "source": "/* global document */

const target = document.querySelector('#target');
target.innerHTML = 'component';
",
          "usedExports": true,
          "warnings": 0,
        },
        Object {
          "assets": Array [],
          "built": true,
          "cacheable": undefined,
          "chunks": Array [
            0,
          ],
          "depth": 0,
          "errors": 0,
          "failed": false,
          "id": 0,
          "identifier": "multi ./app.js",
          "index": 0,
          "index2": 3,
          "issuer": null,
          "issuerId": null,
          "issuerName": null,
          "issuerPath": null,
          "name": "multi ./app.js",
          "optimizationBailout": Array [
            "ModuleConcatenation bailout: Module is not an ECMAScript module",
          ],
          "optional": false,
          "prefetched": false,
          "profile": undefined,
          "providedExports": null,
          "reasons": Array [
            Object {
              "explanation": undefined,
              "module": null,
              "moduleId": null,
              "moduleIdentifier": null,
              "moduleName": null,
              "type": "multi entry",
              "userRequest": undefined,
            },
          ],
          "size": 28,
          "usedExports": true,
          "warnings": 0,
        },
      ],
      "names": Array [
        "main",
      ],
      "origins": Array [
        Object {
          "loc": "main",
          "module": "",
          "moduleId": undefined,
          "moduleIdentifier": "",
          "moduleName": "",
          "reasons": Array [],
          "request": undefined,
        },
      ],
      "parents": Array [],
      "reason": undefined,
      "recorded": undefined,
      "rendered": true,
      "siblings": Array [],
      "size": 837,
    },
  ],
  "entrypoints": Object {
    "main": Object {
      "assets": Array [
        "./output.js",
        "./output.js.map",
      ],
      "childAssets": Object {},
      "children": Object {},
      "chunks": Array [
        0,
      ],
      "isOverSizeLimit": undefined,
    },
  },
  "errors": Array [],
  "filteredAssets": 0,
  "filteredModules": 0,
  "hash": "6617f166070041c8ce34",
  "modules": Array [
    Object {
      "assets": Array [],
      "built": true,
      "cacheable": true,
      "chunks": Array [
        0,
      ],
      "depth": 2,
      "errors": 0,
      "failed": false,
      "id": "../../../node_modules/webpack/buildin/module.js",
      "identifier": "<PROJECT_ROOT>/node_modules/webpack/buildin/module.js",
      "index": 2,
      "index2": 0,
      "issuer": "<PROJECT_ROOT>/test/fixtures/basic/app.js",
      "issuerId": "./app.js",
      "issuerName": "./app.js",
      "issuerPath": Array [
        Object {
          "id": 0,
          "identifier": "multi ./app.js",
          "name": "multi ./app.js",
          "profile": undefined,
        },
        Object {
          "id": "./app.js",
          "identifier": "<PROJECT_ROOT>/test/fixtures/basic/app.js",
          "name": "./app.js",
          "profile": undefined,
        },
      ],
      "name": "(webpack)/buildin/module.js",
      "optimizationBailout": Array [
        "ModuleConcatenation bailout: Module is not an ECMAScript module",
      ],
      "optional": false,
      "prefetched": false,
      "profile": undefined,
      "providedExports": null,
      "reasons": Array [
        Object {
          "explanation": undefined,
          "loc": "1:0-60",
          "module": "./app.js",
          "moduleId": "./app.js",
          "moduleIdentifier": "<PROJECT_ROOT>/test/fixtures/basic/app.js",
          "moduleName": "./app.js",
          "type": "cjs require",
          "userRequest": "module",
        },
      ],
      "size": 497,
      "source": "module.exports = function(module) {
	if (!module.webpackPolyfill) {
		module.deprecate = function() {};
		module.paths = [];
		// module.parent = undefined by default
		if (!module.children) module.children = [];
		Object.defineProperty(module, \\"loaded\\", {
			enumerable: true,
			get: function() {
				return module.l;
			}
		});
		Object.defineProperty(module, \\"id\\", {
			enumerable: true,
			get: function() {
				return module.i;
			}
		});
		module.webpackPolyfill = 1;
	}
	return module;
};
",
      "usedExports": true,
      "warnings": 0,
    },
    Object {
      "assets": Array [],
      "built": true,
      "cacheable": true,
      "chunks": Array [
        0,
      ],
      "depth": 1,
      "errors": 0,
      "failed": false,
      "id": "./app.js",
      "identifier": "<PROJECT_ROOT>/test/fixtures/basic/app.js",
      "index": 1,
      "index2": 2,
      "issuer": "multi ./app.js",
      "issuerId": 0,
      "issuerName": "multi ./app.js",
      "issuerPath": Array [
        Object {
          "id": 0,
          "identifier": "multi ./app.js",
          "name": "multi ./app.js",
          "profile": undefined,
        },
      ],
      "name": "./app.js",
      "optimizationBailout": Array [
        "ModuleConcatenation bailout: Module is not an ECMAScript module",
      ],
      "optional": false,
      "prefetched": false,
      "profile": undefined,
      "providedExports": null,
      "reasons": Array [
        Object {
          "explanation": undefined,
          "loc": "main:100000",
          "module": "multi ./app.js",
          "moduleId": 0,
          "moduleIdentifier": "multi ./app.js",
          "moduleName": "multi ./app.js",
          "type": "single entry",
          "userRequest": "./app.js",
        },
      ],
      "size": 207,
      "source": "/* eslint no-console: off */

require('./component');

if (typeof module.hot === 'object') {
  module.hot.accept((err) => {
    if (err) {
      console.error('Cannot apply HMR update.', err);
    }
  });
}
",
      "usedExports": true,
      "warnings": 0,
    },
    Object {
      "assets": Array [],
      "built": true,
      "cacheable": true,
      "chunks": Array [
        0,
      ],
      "depth": 2,
      "errors": 0,
      "failed": false,
      "id": "./component.js",
      "identifier": "<PROJECT_ROOT>/test/fixtures/basic/component.js",
      "index": 3,
      "index2": 1,
      "issuer": "<PROJECT_ROOT>/test/fixtures/basic/app.js",
      "issuerId": "./app.js",
      "issuerName": "./app.js",
      "issuerPath": Array [
        Object {
          "id": 0,
          "identifier": "multi ./app.js",
          "name": "multi ./app.js",
          "profile": undefined,
        },
        Object {
          "id": "./app.js",
          "identifier": "<PROJECT_ROOT>/test/fixtures/basic/app.js",
          "name": "./app.js",
          "profile": undefined,
        },
      ],
      "name": "./component.js",
      "optimizationBailout": Array [
        "ModuleConcatenation bailout: Module is not an ECMAScript module",
      ],
      "optional": false,
      "prefetched": false,
      "profile": undefined,
      "providedExports": null,
      "reasons": Array [
        Object {
          "explanation": undefined,
          "loc": "3:0-22",
          "module": "./app.js",
          "moduleId": "./app.js",
          "moduleIdentifier": "<PROJECT_ROOT>/test/fixtures/basic/app.js",
          "moduleName": "./app.js",
          "type": "cjs require",
          "userRequest": "./component",
        },
      ],
      "size": 105,
      "source": "/* global document */

const target = document.querySelector('#target');
target.innerHTML = 'component';
",
      "usedExports": true,
      "warnings": 0,
    },
    Object {
      "assets": Array [],
      "built": true,
      "cacheable": undefined,
      "chunks": Array [
        0,
      ],
      "depth": 0,
      "errors": 0,
      "failed": false,
      "id": 0,
      "identifier": "multi ./app.js",
      "index": 0,
      "index2": 3,
      "issuer": null,
      "issuerId": null,
      "issuerName": null,
      "issuerPath": null,
      "name": "multi ./app.js",
      "optimizationBailout": Array [
        "ModuleConcatenation bailout: Module is not an ECMAScript module",
      ],
      "optional": false,
      "prefetched": false,
      "profile": undefined,
      "providedExports": null,
      "reasons": Array [
        Object {
          "explanation": undefined,
          "module": null,
          "moduleId": null,
          "moduleIdentifier": null,
          "moduleName": null,
          "type": "multi entry",
          "userRequest": undefined,
        },
      ],
      "size": 28,
      "usedExports": true,
      "warnings": 0,
    },
  ],
  "namedChunkGroups": Object {
    "main": Object {
      "assets": Array [
        "./output.js",
        "./output.js.map",
      ],
      "childAssets": Object {},
      "children": Object {},
      "chunks": Array [
        0,
      ],
      "isOverSizeLimit": undefined,
    },
  },
  "outputPath": "<PROJECT_ROOT>/test/fixtures/basic",
  "publicPath": "",
  "time": /\\\\d\\+/,
  "version": "4.10.2",
  "warnings": Array [
    "configuration
The 'mode' option has not been set, webpack will fallback to 'production' for this value. Set 'mode' option to 'development' or 'production' to enable defaults for each environment.
You can also set it to 'none' to disable any default behavior. Learn more: https://webpack.js.org/concepts/mode/",
  ],
}
`;

exports[`compiler getCompiler with existing compiler 1`] = `
Object {
  "context": "<PROJECT_ROOT>/test/fixtures/basic",
  "name": undefined,
  "options": Object {
    "cache": false,
    "context": "<PROJECT_ROOT>/test/fixtures/basic",
    "devtool": "source-map",
    "entry": Array [
      "./app.js",
    ],
    "module": Object {
      "defaultRules": Array [
        Object {
          "resolve": Object {},
          "type": "javascript/auto",
        },
        Object {
          "resolve": Object {
            "mainFields": Array [
              "browser",
              "main",
            ],
          },
          "test": /\\\\\\.mjs\\$/i,
          "type": "javascript/esm",
        },
        Object {
          "test": /\\\\\\.json\\$/i,
          "type": "json",
        },
        Object {
          "test": /\\\\\\.wasm\\$/i,
          "type": "webassembly/experimental",
        },
      ],
      "exprContextCritical": true,
      "exprContextRecursive": true,
      "exprContextRegExp": false,
      "exprContextRequest": ".",
      "rules": Array [],
      "strictExportPresence": false,
      "strictThisContextOnImports": false,
      "unknownContextCritical": true,
      "unknownContextRecursive": true,
      "unknownContextRegExp": false,
      "unknownContextRequest": ".",
      "unsafeCache": false,
      "wrappedContextCritical": false,
      "wrappedContextRecursive": true,
      "wrappedContextRegExp": /\\.\\*/,
    },
    "node": Object {
      "Buffer": true,
      "__dirname": "mock",
      "__filename": "mock",
      "console": false,
      "global": true,
      "process": true,
      "setImmediate": true,
    },
    "output": Object {
      "chunkCallbackName": "webpackChunk",
      "chunkFilename": "./[id].output.js",
      "chunkLoadTimeout": 120000,
      "crossOriginLoading": false,
      "devtoolLineToLine": false,
      "devtoolNamespace": "",
      "filename": "./output.js",
      "globalObject": "window",
      "hashDigest": "hex",
      "hashDigestLength": 20,
      "hashFunction": "md4",
      "hotUpdateChunkFilename": "[id].[hash].hot-update.js",
      "hotUpdateFunction": "webpackHotUpdate",
      "hotUpdateMainFilename": "[hash].hot-update.json",
      "jsonpFunction": "webpackJsonp",
      "jsonpScriptType": false,
      "library": "",
      "libraryTarget": "var",
      "path": "<PROJECT_ROOT>/test/fixtures/basic",
      "pathinfo": false,
      "sourceMapFilename": "[file].map[query]",
      "strictModuleExceptionHandling": false,
      "webassemblyModuleFilename": "[modulehash].module.wasm",
    },
    "performance": Object {
      "hints": "warning",
      "maxAssetSize": 250000,
      "maxEntrypointSize": 250000,
    },
    "plugins": Array [
      NamedModulesPlugin {
        "options": Object {},
      },
    ],
    "resolve": Object {
      "aliasFields": Array [
        "browser",
      ],
      "cacheWithContext": false,
      "extensions": Array [
        ".wasm",
        ".mjs",
        ".js",
        ".json",
      ],
      "mainFields": Array [
        "browser",
        "module",
        "main",
      ],
      "mainFiles": Array [
        "index",
      ],
      "modules": Array [
        "node_modules",
      ],
      "unsafeCache": true,
    },
    "resolveLoader": Object {
      "cacheWithContext": false,
      "extensions": Array [
        ".js",
        ".json",
      ],
      "mainFields": Array [
        "loader",
        "main",
      ],
      "mainFiles": Array [
        "index",
      ],
      "unsafeCache": true,
    },
    "serve": Object {},
    "target": "web",
  },
}
`;

exports[`compiler getCompiler with existing compiler 2`] = `
Array [
  "compiler",
]
`;

exports[`compiler getCompiler with existing compiler 3`] = `"Compiler"`;

exports[`compiler getCompiler with existing compiler 4`] = `
Object {
  "assets": Array [
    Object {
      "chunkNames": Array [
        "main",
      ],
      "chunks": Array [
        0,
      ],
      "emitted": true,
      "isOverSizeLimit": undefined,
      "name": "./output.js",
      "size": 1652,
    },
    Object {
      "chunkNames": Array [
        "main",
      ],
      "chunks": Array [
        0,
      ],
      "emitted": true,
      "isOverSizeLimit": undefined,
      "name": "./output.js.map",
      "size": 6012,
    },
  ],
  "assetsByChunkName": Object {
    "main": Array [
      "./output.js",
      "./output.js.map",
    ],
  },
  "builtAt": /\\\\d\\+/,
  "children": Array [],
  "chunks": Array [
    Object {
      "children": Array [],
      "childrenByOrder": Object {},
      "entry": true,
      "files": Array [
        "./output.js",
        "./output.js.map",
      ],
      "filteredModules": 0,
      "hash": "f41570492dc66df80eee",
      "id": 0,
      "initial": true,
      "modules": Array [
        Object {
          "assets": Array [],
          "built": true,
          "cacheable": true,
          "chunks": Array [
            0,
          ],
          "depth": 2,
          "errors": 0,
          "failed": false,
          "id": "../../../node_modules/webpack/buildin/module.js",
          "identifier": "<PROJECT_ROOT>/node_modules/webpack/buildin/module.js",
          "index": 2,
          "index2": 0,
          "issuer": "<PROJECT_ROOT>/test/fixtures/basic/app.js",
          "issuerId": "./app.js",
          "issuerName": "./app.js",
          "issuerPath": Array [
            Object {
              "id": 0,
              "identifier": "multi ./app.js",
              "name": "multi ./app.js",
              "profile": undefined,
            },
            Object {
              "id": "./app.js",
              "identifier": "<PROJECT_ROOT>/test/fixtures/basic/app.js",
              "name": "./app.js",
              "profile": undefined,
            },
          ],
          "name": "(webpack)/buildin/module.js",
          "optimizationBailout": Array [
            "ModuleConcatenation bailout: Module is not an ECMAScript module",
          ],
          "optional": false,
          "prefetched": false,
          "profile": undefined,
          "providedExports": null,
          "reasons": Array [
            Object {
              "explanation": undefined,
              "loc": "1:0-60",
              "module": "./app.js",
              "moduleId": "./app.js",
              "moduleIdentifier": "<PROJECT_ROOT>/test/fixtures/basic/app.js",
              "moduleName": "./app.js",
              "type": "cjs require",
              "userRequest": "module",
            },
          ],
          "size": 497,
          "source": "module.exports = function(module) {
	if (!module.webpackPolyfill) {
		module.deprecate = function() {};
		module.paths = [];
		// module.parent = undefined by default
		if (!module.children) module.children = [];
		Object.defineProperty(module, \\"loaded\\", {
			enumerable: true,
			get: function() {
				return module.l;
			}
		});
		Object.defineProperty(module, \\"id\\", {
			enumerable: true,
			get: function() {
				return module.i;
			}
		});
		module.webpackPolyfill = 1;
	}
	return module;
};
",
          "usedExports": true,
          "warnings": 0,
        },
        Object {
          "assets": Array [],
          "built": true,
          "cacheable": true,
          "chunks": Array [
            0,
          ],
          "depth": 1,
          "errors": 0,
          "failed": false,
          "id": "./app.js",
          "identifier": "<PROJECT_ROOT>/test/fixtures/basic/app.js",
          "index": 1,
          "index2": 2,
          "issuer": "multi ./app.js",
          "issuerId": 0,
          "issuerName": "multi ./app.js",
          "issuerPath": Array [
            Object {
              "id": 0,
              "identifier": "multi ./app.js",
              "name": "multi ./app.js",
              "profile": undefined,
            },
          ],
          "name": "./app.js",
          "optimizationBailout": Array [
            "ModuleConcatenation bailout: Module is not an ECMAScript module",
          ],
          "optional": false,
          "prefetched": false,
          "profile": undefined,
          "providedExports": null,
          "reasons": Array [
            Object {
              "explanation": undefined,
              "loc": "main:100000",
              "module": "multi ./app.js",
              "moduleId": 0,
              "moduleIdentifier": "multi ./app.js",
              "moduleName": "multi ./app.js",
              "type": "single entry",
              "userRequest": "./app.js",
            },
          ],
          "size": 207,
          "source": "/* eslint no-console: off */

require('./component');

if (typeof module.hot === 'object') {
  module.hot.accept((err) => {
    if (err) {
      console.error('Cannot apply HMR update.', err);
    }
  });
}
",
          "usedExports": true,
          "warnings": 0,
        },
        Object {
          "assets": Array [],
          "built": true,
          "cacheable": true,
          "chunks": Array [
            0,
          ],
          "depth": 2,
          "errors": 0,
          "failed": false,
          "id": "./component.js",
          "identifier": "<PROJECT_ROOT>/test/fixtures/basic/component.js",
          "index": 3,
          "index2": 1,
          "issuer": "<PROJECT_ROOT>/test/fixtures/basic/app.js",
          "issuerId": "./app.js",
          "issuerName": "./app.js",
          "issuerPath": Array [
            Object {
              "id": 0,
              "identifier": "multi ./app.js",
              "name": "multi ./app.js",
              "profile": undefined,
            },
            Object {
              "id": "./app.js",
              "identifier": "<PROJECT_ROOT>/test/fixtures/basic/app.js",
              "name": "./app.js",
              "profile": undefined,
            },
          ],
          "name": "./component.js",
          "optimizationBailout": Array [
            "ModuleConcatenation bailout: Module is not an ECMAScript module",
          ],
          "optional": false,
          "prefetched": false,
          "profile": undefined,
          "providedExports": null,
          "reasons": Array [
            Object {
              "explanation": undefined,
              "loc": "3:0-22",
              "module": "./app.js",
              "moduleId": "./app.js",
              "moduleIdentifier": "<PROJECT_ROOT>/test/fixtures/basic/app.js",
              "moduleName": "./app.js",
              "type": "cjs require",
              "userRequest": "./component",
            },
          ],
          "size": 105,
          "source": "/* global document */

const target = document.querySelector('#target');
target.innerHTML = 'component';
",
          "usedExports": true,
          "warnings": 0,
        },
        Object {
          "assets": Array [],
          "built": true,
          "cacheable": undefined,
          "chunks": Array [
            0,
          ],
          "depth": 0,
          "errors": 0,
          "failed": false,
          "id": 0,
          "identifier": "multi ./app.js",
          "index": 0,
          "index2": 3,
          "issuer": null,
          "issuerId": null,
          "issuerName": null,
          "issuerPath": null,
          "name": "multi ./app.js",
          "optimizationBailout": Array [
            "ModuleConcatenation bailout: Module is not an ECMAScript module",
          ],
          "optional": false,
          "prefetched": false,
          "profile": undefined,
          "providedExports": null,
          "reasons": Array [
            Object {
              "explanation": undefined,
              "module": null,
              "moduleId": null,
              "moduleIdentifier": null,
              "moduleName": null,
              "type": "multi entry",
              "userRequest": undefined,
            },
          ],
          "size": 28,
          "usedExports": true,
          "warnings": 0,
        },
      ],
      "names": Array [
        "main",
      ],
      "origins": Array [
        Object {
          "loc": "main",
          "module": "",
          "moduleId": undefined,
          "moduleIdentifier": "",
          "moduleName": "",
          "reasons": Array [],
          "request": undefined,
        },
      ],
      "parents": Array [],
      "reason": undefined,
      "recorded": undefined,
      "rendered": true,
      "siblings": Array [],
      "size": 837,
    },
  ],
  "entrypoints": Object {
    "main": Object {
      "assets": Array [
        "./output.js",
        "./output.js.map",
      ],
      "childAssets": Object {},
      "children": Object {},
      "chunks": Array [
        0,
      ],
      "isOverSizeLimit": undefined,
    },
  },
  "errors": Array [],
  "filteredAssets": 0,
  "filteredModules": 0,
  "hash": "6617f166070041c8ce34",
  "modules": Array [
    Object {
      "assets": Array [],
      "built": true,
      "cacheable": true,
      "chunks": Array [
        0,
      ],
      "depth": 2,
      "errors": 0,
      "failed": false,
      "id": "../../../node_modules/webpack/buildin/module.js",
      "identifier": "<PROJECT_ROOT>/node_modules/webpack/buildin/module.js",
      "index": 2,
      "index2": 0,
      "issuer": "<PROJECT_ROOT>/test/fixtures/basic/app.js",
      "issuerId": "./app.js",
      "issuerName": "./app.js",
      "issuerPath": Array [
        Object {
          "id": 0,
          "identifier": "multi ./app.js",
          "name": "multi ./app.js",
          "profile": undefined,
        },
        Object {
          "id": "./app.js",
          "identifier": "<PROJECT_ROOT>/test/fixtures/basic/app.js",
          "name": "./app.js",
          "profile": undefined,
        },
      ],
      "name": "(webpack)/buildin/module.js",
      "optimizationBailout": Array [
        "ModuleConcatenation bailout: Module is not an ECMAScript module",
      ],
      "optional": false,
      "prefetched": false,
      "profile": undefined,
      "providedExports": null,
      "reasons": Array [
        Object {
          "explanation": undefined,
          "loc": "1:0-60",
          "module": "./app.js",
          "moduleId": "./app.js",
          "moduleIdentifier": "<PROJECT_ROOT>/test/fixtures/basic/app.js",
          "moduleName": "./app.js",
          "type": "cjs require",
          "userRequest": "module",
        },
      ],
      "size": 497,
      "source": "module.exports = function(module) {
	if (!module.webpackPolyfill) {
		module.deprecate = function() {};
		module.paths = [];
		// module.parent = undefined by default
		if (!module.children) module.children = [];
		Object.defineProperty(module, \\"loaded\\", {
			enumerable: true,
			get: function() {
				return module.l;
			}
		});
		Object.defineProperty(module, \\"id\\", {
			enumerable: true,
			get: function() {
				return module.i;
			}
		});
		module.webpackPolyfill = 1;
	}
	return module;
};
",
      "usedExports": true,
      "warnings": 0,
    },
    Object {
      "assets": Array [],
      "built": true,
      "cacheable": true,
      "chunks": Array [
        0,
      ],
      "depth": 1,
      "errors": 0,
      "failed": false,
      "id": "./app.js",
      "identifier": "<PROJECT_ROOT>/test/fixtures/basic/app.js",
      "index": 1,
      "index2": 2,
      "issuer": "multi ./app.js",
      "issuerId": 0,
      "issuerName": "multi ./app.js",
      "issuerPath": Array [
        Object {
          "id": 0,
          "identifier": "multi ./app.js",
          "name": "multi ./app.js",
          "profile": undefined,
        },
      ],
      "name": "./app.js",
      "optimizationBailout": Array [
        "ModuleConcatenation bailout: Module is not an ECMAScript module",
      ],
      "optional": false,
      "prefetched": false,
      "profile": undefined,
      "providedExports": null,
      "reasons": Array [
        Object {
          "explanation": undefined,
          "loc": "main:100000",
          "module": "multi ./app.js",
          "moduleId": 0,
          "moduleIdentifier": "multi ./app.js",
          "moduleName": "multi ./app.js",
          "type": "single entry",
          "userRequest": "./app.js",
        },
      ],
      "size": 207,
      "source": "/* eslint no-console: off */

require('./component');

if (typeof module.hot === 'object') {
  module.hot.accept((err) => {
    if (err) {
      console.error('Cannot apply HMR update.', err);
    }
  });
}
",
      "usedExports": true,
      "warnings": 0,
    },
    Object {
      "assets": Array [],
      "built": true,
      "cacheable": true,
      "chunks": Array [
        0,
      ],
      "depth": 2,
      "errors": 0,
      "failed": false,
      "id": "./component.js",
      "identifier": "<PROJECT_ROOT>/test/fixtures/basic/component.js",
      "index": 3,
      "index2": 1,
      "issuer": "<PROJECT_ROOT>/test/fixtures/basic/app.js",
      "issuerId": "./app.js",
      "issuerName": "./app.js",
      "issuerPath": Array [
        Object {
          "id": 0,
          "identifier": "multi ./app.js",
          "name": "multi ./app.js",
          "profile": undefined,
        },
        Object {
          "id": "./app.js",
          "identifier": "<PROJECT_ROOT>/test/fixtures/basic/app.js",
          "name": "./app.js",
          "profile": undefined,
        },
      ],
      "name": "./component.js",
      "optimizationBailout": Array [
        "ModuleConcatenation bailout: Module is not an ECMAScript module",
      ],
      "optional": false,
      "prefetched": false,
      "profile": undefined,
      "providedExports": null,
      "reasons": Array [
        Object {
          "explanation": undefined,
          "loc": "3:0-22",
          "module": "./app.js",
          "moduleId": "./app.js",
          "moduleIdentifier": "<PROJECT_ROOT>/test/fixtures/basic/app.js",
          "moduleName": "./app.js",
          "type": "cjs require",
          "userRequest": "./component",
        },
      ],
      "size": 105,
      "source": "/* global document */

const target = document.querySelector('#target');
target.innerHTML = 'component';
",
      "usedExports": true,
      "warnings": 0,
    },
    Object {
      "assets": Array [],
      "built": true,
      "cacheable": undefined,
      "chunks": Array [
        0,
      ],
      "depth": 0,
      "errors": 0,
      "failed": false,
      "id": 0,
      "identifier": "multi ./app.js",
      "index": 0,
      "index2": 3,
      "issuer": null,
      "issuerId": null,
      "issuerName": null,
      "issuerPath": null,
      "name": "multi ./app.js",
      "optimizationBailout": Array [
        "ModuleConcatenation bailout: Module is not an ECMAScript module",
      ],
      "optional": false,
      "prefetched": false,
      "profile": undefined,
      "providedExports": null,
      "reasons": Array [
        Object {
          "explanation": undefined,
          "module": null,
          "moduleId": null,
          "moduleIdentifier": null,
          "moduleName": null,
          "type": "multi entry",
          "userRequest": undefined,
        },
      ],
      "size": 28,
      "usedExports": true,
      "warnings": 0,
    },
  ],
  "namedChunkGroups": Object {
    "main": Object {
      "assets": Array [
        "./output.js",
        "./output.js.map",
      ],
      "childAssets": Object {},
      "children": Object {},
      "chunks": Array [
        0,
      ],
      "isOverSizeLimit": undefined,
    },
  },
  "outputPath": "<PROJECT_ROOT>/test/fixtures/basic",
  "publicPath": "",
  "time": /\\\\d\\+/,
  "version": "4.10.2",
  "warnings": Array [
    "configuration
The 'mode' option has not been set, webpack will fallback to 'production' for this value. Set 'mode' option to 'development' or 'production' to enable defaults for each environment.
You can also set it to 'none' to disable any default behavior. Learn more: https://webpack.js.org/concepts/mode/",
  ],
}
`;

exports[`compiler invalid config error 1`] = `
"An error was thrown while initializing Webpack
  WebpackOptionsValidationError: Invalid configuration object. Webpack has been initialised using a configuration object that does not match the API schema.
 - configuration has an unknown property 'foo'. These properties are valid:
   object { mode?, amd?, bail?, cache?, context?, dependencies?, devServer?, devtool?, entry?, externals?, loader?, module?, name?, node?, output?, optimization?, parallelism?, performance?, plugins?, profile?, recordsInputPath?, recordsOutputPath?, recordsPath?, resolve?, resolveLoader?, serve?, stats?, target?, watch?, watchOptions? }
   For typos: please correct them.
   For loader options: webpack >= v2.0.0 no longer allows custom properties in configuration.
     Loaders should be updated to allow passing options via loader options in module.rules.
     Until loaders are updated one can use the LoaderOptionsPlugin to pass these options to the loader:
     plugins: [
       new webpack.LoaderOptionsPlugin({
         // test: /\\\\.xxx$/, // may apply this only for some modules
         options: {
           foo: …
         }
       })
     ]"
`;

exports[`compiler warnings 1`] = `
Object {
  "context": "<PROJECT_ROOT>/test/fixtures/warning",
  "name": undefined,
  "options": Object {
    "cache": false,
    "context": "<PROJECT_ROOT>/test/fixtures/warning",
    "devtool": "source-map",
    "entry": Array [
      "./app.js",
    ],
    "module": Object {
      "defaultRules": Array [
        Object {
          "resolve": Object {},
          "type": "javascript/auto",
        },
        Object {
          "resolve": Object {
            "mainFields": Array [
              "browser",
              "main",
            ],
          },
          "test": /\\\\\\.mjs\\$/i,
          "type": "javascript/esm",
        },
        Object {
          "test": /\\\\\\.json\\$/i,
          "type": "json",
        },
        Object {
          "test": /\\\\\\.wasm\\$/i,
          "type": "webassembly/experimental",
        },
      ],
      "exprContextCritical": true,
      "exprContextRecursive": true,
      "exprContextRegExp": false,
      "exprContextRequest": ".",
      "rules": Array [],
      "strictExportPresence": false,
      "strictThisContextOnImports": false,
      "unknownContextCritical": true,
      "unknownContextRecursive": true,
      "unknownContextRegExp": false,
      "unknownContextRequest": ".",
      "unsafeCache": false,
      "wrappedContextCritical": false,
      "wrappedContextRecursive": true,
      "wrappedContextRegExp": /\\.\\*/,
    },
    "node": Object {
      "Buffer": true,
      "__dirname": "mock",
      "__filename": "mock",
      "console": false,
      "global": true,
      "process": true,
      "setImmediate": true,
    },
    "output": Object {
      "chunkCallbackName": "webpackChunk",
      "chunkFilename": "./[id].output.js",
      "chunkLoadTimeout": 120000,
      "crossOriginLoading": false,
      "devtoolLineToLine": false,
      "devtoolNamespace": "",
      "filename": "./output.js",
      "globalObject": "window",
      "hashDigest": "hex",
      "hashDigestLength": 20,
      "hashFunction": "md4",
      "hotUpdateChunkFilename": "[id].[hash].hot-update.js",
      "hotUpdateFunction": "webpackHotUpdate",
      "hotUpdateMainFilename": "[hash].hot-update.json",
      "jsonpFunction": "webpackJsonp",
      "jsonpScriptType": false,
      "library": "",
      "libraryTarget": "var",
      "path": "<PROJECT_ROOT>/test/fixtures/warning",
      "pathinfo": false,
      "sourceMapFilename": "[file].map[query]",
      "strictModuleExceptionHandling": false,
      "webassemblyModuleFilename": "[modulehash].module.wasm",
    },
    "performance": Object {
      "hints": "warning",
      "maxAssetSize": 250000,
      "maxEntrypointSize": 250000,
    },
    "plugins": Array [
      NamedModulesPlugin {
        "options": Object {},
      },
    ],
    "resolve": Object {
      "aliasFields": Array [
        "browser",
      ],
      "cacheWithContext": false,
      "extensions": Array [
        ".wasm",
        ".mjs",
        ".js",
        ".json",
      ],
      "mainFields": Array [
        "browser",
        "module",
        "main",
      ],
      "mainFiles": Array [
        "index",
      ],
      "modules": Array [
        "node_modules",
      ],
      "unsafeCache": true,
    },
    "resolveLoader": Object {
      "cacheWithContext": false,
      "extensions": Array [
        ".js",
        ".json",
      ],
      "mainFields": Array [
        "loader",
        "main",
      ],
      "mainFiles": Array [
        "index",
      ],
      "unsafeCache": true,
    },
    "serve": Object {},
    "target": "web",
  },
}
`;

exports[`compiler warnings 2`] = `
Object {
  "assets": Array [
    Object {
      "chunkNames": Array [
        "main",
      ],
      "chunks": Array [
        0,
      ],
      "emitted": true,
      "isOverSizeLimit": undefined,
      "name": "./output.js",
      "size": 1262,
    },
    Object {
      "chunkNames": Array [
        "main",
      ],
      "chunks": Array [
        0,
      ],
      "emitted": true,
      "isOverSizeLimit": undefined,
      "name": "./output.js.map",
      "size": 5218,
    },
  ],
  "assetsByChunkName": Object {
    "main": Array [
      "./output.js",
      "./output.js.map",
    ],
  },
  "builtAt": /\\\\d\\+/,
  "children": Array [],
  "chunks": Array [
    Object {
      "children": Array [],
      "childrenByOrder": Object {},
      "entry": true,
      "files": Array [
        "./output.js",
        "./output.js.map",
      ],
      "filteredModules": 0,
      "hash": "1b8586e59528cce494a5",
      "id": 0,
      "initial": true,
      "modules": Array [
        Object {
          "assets": Array [],
          "built": true,
          "cacheable": undefined,
          "chunks": Array [
            0,
          ],
          "depth": 2,
          "errors": 0,
          "failed": false,
          "id": "./ sync recursive",
          "identifier": "<PROJECT_ROOT>/test/fixtures/warning sync",
          "index": 2,
          "index2": 0,
          "issuer": "<PROJECT_ROOT>/test/fixtures/warning/app.js",
          "issuerId": "./app.js",
          "issuerName": "./app.js",
          "issuerPath": Array [
            Object {
              "id": 0,
              "identifier": "multi ./app.js",
              "name": "multi ./app.js",
              "profile": undefined,
            },
            Object {
              "id": "./app.js",
              "identifier": "<PROJECT_ROOT>/test/fixtures/warning/app.js",
              "name": "./app.js",
              "profile": undefined,
            },
          ],
          "name": ". sync",
          "optimizationBailout": Array [
            "ModuleConcatenation bailout: Module is not an ECMAScript module",
          ],
          "optional": false,
          "prefetched": false,
          "profile": undefined,
          "providedExports": null,
          "reasons": Array [
            Object {
              "explanation": undefined,
              "loc": "3:12-19",
              "module": "./app.js",
              "moduleId": "./app.js",
              "moduleIdentifier": "<PROJECT_ROOT>/test/fixtures/warning/app.js",
              "moduleName": "./app.js",
              "type": "cjs require context",
              "userRequest": ".",
            },
          ],
          "size": 160,
          "usedExports": true,
          "warnings": 0,
        },
        Object {
          "assets": Array [],
          "built": true,
          "cacheable": true,
          "chunks": Array [
            0,
          ],
          "depth": 1,
          "errors": 0,
          "failed": false,
          "id": "./app.js",
          "identifier": "<PROJECT_ROOT>/test/fixtures/warning/app.js",
          "index": 1,
          "index2": 1,
          "issuer": "multi ./app.js",
          "issuerId": 0,
          "issuerName": "multi ./app.js",
          "issuerPath": Array [
            Object {
              "id": 0,
              "identifier": "multi ./app.js",
              "name": "multi ./app.js",
              "profile": undefined,
            },
          ],
          "name": "./app.js",
          "optimizationBailout": Array [
            "ModuleConcatenation bailout: Module is not an ECMAScript module",
          ],
          "optional": false,
          "prefetched": false,
          "profile": undefined,
          "providedExports": null,
          "reasons": Array [
            Object {
              "explanation": undefined,
              "loc": "main:100000",
              "module": "multi ./app.js",
              "moduleId": 0,
              "moduleIdentifier": "multi ./app.js",
              "moduleName": "multi ./app.js",
              "type": "single entry",
              "userRequest": "./app.js",
            },
          ],
          "size": 52,
          "source": "/* eslint no-console: off */

console.log(require);
",
          "usedExports": true,
          "warnings": 0,
        },
        Object {
          "assets": Array [],
          "built": true,
          "cacheable": undefined,
          "chunks": Array [
            0,
          ],
          "depth": 0,
          "errors": 0,
          "failed": false,
          "id": 0,
          "identifier": "multi ./app.js",
          "index": 0,
          "index2": 2,
          "issuer": null,
          "issuerId": null,
          "issuerName": null,
          "issuerPath": null,
          "name": "multi ./app.js",
          "optimizationBailout": Array [
            "ModuleConcatenation bailout: Module is not an ECMAScript module",
          ],
          "optional": false,
          "prefetched": false,
          "profile": undefined,
          "providedExports": null,
          "reasons": Array [
            Object {
              "explanation": undefined,
              "module": null,
              "moduleId": null,
              "moduleIdentifier": null,
              "moduleName": null,
              "type": "multi entry",
              "userRequest": undefined,
            },
          ],
          "size": 28,
          "usedExports": true,
          "warnings": 0,
        },
      ],
      "names": Array [
        "main",
      ],
      "origins": Array [
        Object {
          "loc": "main",
          "module": "",
          "moduleId": undefined,
          "moduleIdentifier": "",
          "moduleName": "",
          "reasons": Array [],
          "request": undefined,
        },
      ],
      "parents": Array [],
      "reason": undefined,
      "recorded": undefined,
      "rendered": true,
      "siblings": Array [],
      "size": 240,
    },
  ],
  "entrypoints": Object {
    "main": Object {
      "assets": Array [
        "./output.js",
        "./output.js.map",
      ],
      "childAssets": Object {},
      "children": Object {},
      "chunks": Array [
        0,
      ],
      "isOverSizeLimit": undefined,
    },
  },
  "errors": Array [],
  "filteredAssets": 0,
  "filteredModules": 0,
  "hash": "f54d9493ed38e0b3c253",
  "modules": Array [
    Object {
      "assets": Array [],
      "built": true,
      "cacheable": undefined,
      "chunks": Array [
        0,
      ],
      "depth": 2,
      "errors": 0,
      "failed": false,
      "id": "./ sync recursive",
      "identifier": "<PROJECT_ROOT>/test/fixtures/warning sync",
      "index": 2,
      "index2": 0,
      "issuer": "<PROJECT_ROOT>/test/fixtures/warning/app.js",
      "issuerId": "./app.js",
      "issuerName": "./app.js",
      "issuerPath": Array [
        Object {
          "id": 0,
          "identifier": "multi ./app.js",
          "name": "multi ./app.js",
          "profile": undefined,
        },
        Object {
          "id": "./app.js",
          "identifier": "<PROJECT_ROOT>/test/fixtures/warning/app.js",
          "name": "./app.js",
          "profile": undefined,
        },
      ],
      "name": ". sync",
      "optimizationBailout": Array [
        "ModuleConcatenation bailout: Module is not an ECMAScript module",
      ],
      "optional": false,
      "prefetched": false,
      "profile": undefined,
      "providedExports": null,
      "reasons": Array [
        Object {
          "explanation": undefined,
          "loc": "3:12-19",
          "module": "./app.js",
          "moduleId": "./app.js",
          "moduleIdentifier": "<PROJECT_ROOT>/test/fixtures/warning/app.js",
          "moduleName": "./app.js",
          "type": "cjs require context",
          "userRequest": ".",
        },
      ],
      "size": 160,
      "usedExports": true,
      "warnings": 0,
    },
    Object {
      "assets": Array [],
      "built": true,
      "cacheable": true,
      "chunks": Array [
        0,
      ],
      "depth": 1,
      "errors": 0,
      "failed": false,
      "id": "./app.js",
      "identifier": "<PROJECT_ROOT>/test/fixtures/warning/app.js",
      "index": 1,
      "index2": 1,
      "issuer": "multi ./app.js",
      "issuerId": 0,
      "issuerName": "multi ./app.js",
      "issuerPath": Array [
        Object {
          "id": 0,
          "identifier": "multi ./app.js",
          "name": "multi ./app.js",
          "profile": undefined,
        },
      ],
      "name": "./app.js",
      "optimizationBailout": Array [
        "ModuleConcatenation bailout: Module is not an ECMAScript module",
      ],
      "optional": false,
      "prefetched": false,
      "profile": undefined,
      "providedExports": null,
      "reasons": Array [
        Object {
          "explanation": undefined,
          "loc": "main:100000",
          "module": "multi ./app.js",
          "moduleId": 0,
          "moduleIdentifier": "multi ./app.js",
          "moduleName": "multi ./app.js",
          "type": "single entry",
          "userRequest": "./app.js",
        },
      ],
      "size": 52,
      "source": "/* eslint no-console: off */

console.log(require);
",
      "usedExports": true,
      "warnings": 0,
    },
    Object {
      "assets": Array [],
      "built": true,
      "cacheable": undefined,
      "chunks": Array [
        0,
      ],
      "depth": 0,
      "errors": 0,
      "failed": false,
      "id": 0,
      "identifier": "multi ./app.js",
      "index": 0,
      "index2": 2,
      "issuer": null,
      "issuerId": null,
      "issuerName": null,
      "issuerPath": null,
      "name": "multi ./app.js",
      "optimizationBailout": Array [
        "ModuleConcatenation bailout: Module is not an ECMAScript module",
      ],
      "optional": false,
      "prefetched": false,
      "profile": undefined,
      "providedExports": null,
      "reasons": Array [
        Object {
          "explanation": undefined,
          "module": null,
          "moduleId": null,
          "moduleIdentifier": null,
          "moduleName": null,
          "type": "multi entry",
          "userRequest": undefined,
        },
      ],
      "size": 28,
      "usedExports": true,
      "warnings": 0,
    },
  ],
  "namedChunkGroups": Object {
    "main": Object {
      "assets": Array [
        "./output.js",
        "./output.js.map",
      ],
      "childAssets": Object {},
      "children": Object {},
      "chunks": Array [
        0,
      ],
      "isOverSizeLimit": undefined,
    },
  },
  "outputPath": "<PROJECT_ROOT>/test/fixtures/warning",
  "publicPath": "",
  "time": /\\\\d\\+/,
  "version": /\\\\d\\+\\\\\\.\\\\d\\+\\\\\\.\\\\d\\+/,
  "warnings": Array [
    "./app.js
3:12-19 Critical dependency: require function is used in a way in which dependencies cannot be statically extracted @ ./app.js
 @ multi ./app.js",
    "configuration
The 'mode' option has not been set, webpack will fallback to 'production' for this value. Set 'mode' option to 'development' or 'production' to enable defaults for each environment.
You can also set it to 'none' to disable any default behavior. Learn more: https://webpack.js.org/concepts/mode/",
  ],
}
`;
